Some issues of design alignment solved

--- a/src/components/Ausstellung2023components/Hometownheroesperasection/hometownheroesperasection.scss
+++ b/src/components/Ausstellung2023components/Hometownheroesperasection/hometownheroesperasection.scss
@@ -20,10 +20,10 @@
       width: 100%;
 
       img {
-        max-width: 299px;
-        min-width: 299px;
-        max-height: 399px;
-        min-height: 399px;
+        min-width: 476px;
+        max-width: 476px;
+        min-height: 648px;
+        max-height: 648px;
         display: block;
       }
     }
