--- a/src/components/Ausstellung2023components/TheIdeadiv/theideassection.scss
+++ b/src/components/Ausstellung2023components/TheIdeadiv/theideassection.scss
@@ -3,6 +3,12 @@
   height: 100%;
 
   .the-ideas-section-container {
+    max-width: 1086px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
+  .the-ideas-section-container-second {
     max-width: 1270px;
     margin: 0 auto;
     padding: 0 20px;
