--- a/src/components/Lwandlecomponents/Lwandleherobanner/Lwandleherobanner.scss
+++ b/src/components/Lwandlecomponents/Lwandleherobanner/Lwandleherobanner.scss
@@ -157,7 +157,7 @@
           gap: 10px;
           margin: 0 0 30px 0;
 
-          input[type="radio"] {
+          input[type="checkbox"] {
             appearance: none;
             width: 10px;
             height: 10px;
@@ -169,7 +169,7 @@
             background-color: #000;
           }
 
-          input[type="radio"]:checked {
+          input[type="checkbox"]:checked {
             background-color: #fff;
             border-color: #fff;
           }
